--- a/Minh Tung/CK/package.json
+++ b/Minh Tung/CK/package.json
@@ -12,7 +12,8 @@
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "passport": "^0.4.0"
   },
   "main": "app.js",
   "devDependencies": {},
